feat: update gpg link

--- a/config.toml
+++ b/config.toml
@@ -43,7 +43,7 @@ metaDataFormat= "yaml"
 
   [[params.social]]
     name = "gpg"
-    url  = "https://keys.openpgp.org/"
+    url  = "https://keys.openpgp.org/search?q=luang%40protonmail.ch"
 
   [[params.social]]
     name = "github"
