Revamp links and bio, update navigation
Restructure navigation and digital projects by introducing a unified
'Links' section and replacing the previous 'Sites' and related menu
entries. Expand the about page with an updated personal and
professional biography for better clarity and context.

Update configuration with improved pagination settings, fresh quotes,
and a descriptive tagline to enhance the site's identity. Update social
and contact addresses to reflect recent changes, and regenerate static
content to reflect these updates in the UI and metadata.

These changes aim to present a more cohesive overview of digital
work, increase maintainability, and better convey current professional
background and contact information.

--- a/config.toml
+++ b/config.toml
@@ -2,9 +2,11 @@ baseURL = "https://l2n.me"
 title = "luanguimaraesla"
 theme = "gruvhugo"
 languageCode = "en-us"
-paginate = 10
 
 publishDir = "docs"
+
+[pagination]
+  pagerSize = 10
 
 # Default Post Extension
 defaultExtension= "html"
@@ -28,8 +30,8 @@ metaDataFormat= "yaml"
   img = "img/me.jpg"
   img_title = "Picture from the day burned my eyes with a telescope."
   icon = "img/logo.png"
-  quote = ""
-  description= ""
+  quote = "Software architect, engineering leader, and outdoor enthusiast"
+  description= "Building reliable systems and exploring the world between code and nature."
   licenseUrl = ""
 
  # Social icons
@@ -39,7 +41,7 @@ metaDataFormat= "yaml"
 
   [[params.social]]
     name = "email"
-    url  = "mailto:luang@protonmail.ch?subject=hi%20luan"
+    url  = "mailto:luan@l2n.me?subject=hi%20luan"
 
   [[params.social]]
     name = "gpg"
@@ -66,20 +68,10 @@ metaDataFormat= "yaml"
     weight = 100
     url = "about"
   [[menu.main]]
-    identifier = "slides"
-    name = "Slides"
+    identifier = "links"
+    name = "Links"
     weight = 0
-    url = "https://slides.l2n.me"
-  [[menu.main]]
-    identifier = "sites"
-    name = "Sites"
-    weight = 0
-    url = "sites"
-  [[menu.main]]
-    identifier = "cv"
-    name = "Curriculum"
-    weight = 0
-    url = "https://cv.l2n.me"
+    url = "links"
 
 [markup]
   defaultMarkdownHandler = "goldmark"
