Add meetings scheduling page and update URLs
Introduced a meetings page with a Google Calendar iframe for scheduling.
Added navigation and menu entries for meetings. Updated all production URLs
from l2n.me to localhost:3000 to match local development. Enabled unsafe HTML
rendering for Goldmark to support embedded iframes. Added corresponding CSS
for the calendar container. This improves usability by allowing users to book
meetings directly from the site and ensures correct local links for development
and testing purposes.

--- a/config.toml
+++ b/config.toml
@@ -72,6 +72,11 @@ metaDataFormat= "yaml"
     name = "Links"
     weight = 0
     url = "links"
+  [[menu.main]]
+    identifier = "meetings"
+    name = "Meetings"
+    weight = 50
+    url = "meetings"
 
 [markup]
   defaultMarkdownHandler = "goldmark"
@@ -117,7 +122,7 @@ metaDataFormat= "yaml"
       autoHeadingIDType = "github"
     [markup.goldmark.renderer]
       hardWraps = false
-      unsafe = false
+      unsafe = true
       xhtml = false
   [markup.highlight]
     codeFences = true
